--- a/css/estilo.css
+++ b/css/estilo.css
@@ -98,6 +98,7 @@ input.txt {
     padding: 7px;
     padding-left: 15px;
     padding-right: 15px;
+    text-decoration:none;
 }
 .boton:hover{
     background-color: rgb(100, 130, 228);
